Fixed at Harvard

--- a/jinja2/academics.html.jinja2
+++ b/jinja2/academics.html.jinja2
@@ -152,29 +152,53 @@
                 <a href="#concentration-raw-tab" data-toggle="tab">Concentrations</a>
             </li>
             <li>
+                <a href="#concentration-gender-tab" data-toggle="tab">Concentrations by Gender</a>
+            </li>
+            <li>
                 <a href="#secondary-tab" data-toggle="tab">Secondary/Citation</a>
+            </li>
+            <li>
+                <a href="#greek-tab" data-toggle="tab">Greek Life</a>
+            </li>
+            <li>
+                <a href="#greek-school-tab" data-toggle="tab">Greek Life by School Type</a>
             </li>
         </ul>
         <ul class="tab-panes">
             <li id="study-habits-future-tab" class="active">
                 <h2>Anticipated College Study Hours</h2>
                 <div id="study-habits-future" class="graph"></div>
-                <p>A plurality of respondents indicated that they anticipate studying for between 20 and 29 hours a week in college, and more respondents expect to study 50 or more than 10 or fewer. In contrast, a plurality said they spent fewer than 10 hours a week studying in high school.</p>
+                <p>A plurality of respondents reported that they expect to study between 20 and 29 hours a week at Harvard. Just 6 percent said they expect to study 50 or more hours a week.</p>
             </li>
             <li id="priorities-raw-tab">
                 <h2>Anticipated College Priorities</h2>
                 <div id="priorities-raw" class="graph"></div>
-                <p>When asked to rank their anticipated college priorities among academics, extracurriculars, paid employment, varsity sports, and social life, the vast majority of respondents ranked academics as their top priority. A plurality of respondents named extracurriculars as their second priority.</p>
+                <p>This year&rsquo;s respondents&rsquo; priorities differ little from those of their surveyed sophomore counterparts last fall. The vast majority of this year&rsquo;s respondents ranked academics as their number one priority while at college, while only .4 percent of respondents ranked term-time employment as their top priority. Forty-three percent of respondents ranked extracurricular activities as their second highest priority at Harvard.</p>
             </li>
             <li id="secondary-tab">
                 <h2>Anticipated Secondaries and Language Citations</h2>
                 <div id="secondary" class="graph"></div>
-                <p>Twenty-three percent of respondents intend to pursue both a secondary and a language citation at Harvard, and 28 percent plan to pursue neither.</p>
+                <p>Interest in fulfilling secondary fields and language citations remained largely the same in this year&rsquo;s survey, with 40 percent of respondents reporting they intend to pursue a secondary and 12 percent reporting they intend to pursue a language citation.</p>
             </li>
             <li id="concentration-raw-tab">
                 <h2>Anticipated Concentrations</h2>
                 <div id="concentration-raw" class="graph"></div>
-                <p>Just 11 percent of respondents said they plan to pursue a concentration in the arts and humanities division. Sixteen percent of current College students concentrate in the arts and humanities. In recent months, a faculty committee at Harvard and op-ed columnists across the country have sought solutions for the decline of humanistic study in academia.</p>
+                <p>Like last year&rsquo;s respondents, a plurality of this year&rsquo;s surveyed freshmen report that they are planning to concentrate in the social sciences. </p>
+            </li>
+            <li id="concentration-gender-tab">
+                <h2>Anticipated Concentrations by Gender</h2>
+                <div id="concentration-gender" class="graph"></div>
+                <p>Gender disparities in concentration choice are very much in the national discourse, and the issue presents itself at Harvard as well. Female members of the Class of 2018 were more interested in concentrating in arts and humanities, social sciences, and life sciences than their male counterparts, while males were more interested in other sciences and engineering.</p>
+            </li>
+            <li id="greek-tab">
+                <h2>Frats, Sororities, and Final Clubs</h2>
+                <div id="greek" class="graph"></div>
+                <p>Slightly less than half of respondents said that they were somewhat or very interested in joining a fraternity, sorority, or final club.</p>
+            </li>
+            <li id="greek-school-tab">
+                <h2>Frats, Sororities, and Final Clubs by School Type</h2>
+                <div id="greek-school" class="graph"></div>
+                <p>Respondents from public schools were overall less interested than those from private schools in joining fraternities, sororities, or final clubs during their time at Harvard.</p>
             </li>
         </ul>
     </div>
