add economics concentration by athletics

--- a/jinja2/academics.html.jinja2
+++ b/jinja2/academics.html.jinja2
@@ -224,6 +224,9 @@
             <li>
                 <a href="#concussions-view-tab" data-toggle="tab">Attitudes Regarding Concussions</a>
             </li>
+            <li>
+                <a href="#athletes-economics-conc-tab" data-toggle="tab">Preferences for Economics by Athletics</a>
+            </li>
         </ul>
         <ul class="tab-panes">
             <li id="athletes-raw-tab" class="active">
@@ -245,6 +248,11 @@
                 <h2>Effect of Concussions on Attitude Towards Sport</h2>
                 <div id="concussions-view" class="graph"></div>
                 <p>23 percent of respondents who reported having been concussed said they changed their attitudes toward concussions because of the incident.</p>
+            </li>
+            <li id="athletes-economics-conc-tab">
+                <h2>Preferences for Economics by Athletics</h2>
+                <div id="athletes-economics-conc" class="graph"></div>
+                <p>Economics, the most popular prospective concentration among respondents, appears to interest some groups more than others. Recruited athletes were much more likely to report intention to concentrate in the field than non-recruits.</p>
             </li>
         </ul>
     </div>
