add academics captions

--- a/jinja2/academics.html.jinja2
+++ b/jinja2/academics.html.jinja2
@@ -17,8 +17,9 @@
 {% block content %}
     <div class="intro scroll-row">
         <div id="subhead">Academics and Extracurriculars</div>
-        <p>Part III of The Crimson&#39;s survey of the Class of 2017 looks at incoming freshmen&#39;s academic and extracurricular lives&mdash;and how they prioritize the two. The survey of more than 1,300 members of the freshman class sheds light on what these students did in high school and what they plan to do in college. Some of them admitted to cheating, others said they have been concussed, and nearly all of them say they expect to make academics their top priority at Harvard. This and other data on their experiences and plans in the classroom, in clubs, and on the playing field reveals a group defined by both their similarities and their differences.</p>
-        <p>Read Part III of The Crimson's four-part series on the freshman survey <a href="http://www.thecrimson.com/article/2013/9/5/freshman-survey-academics-extracurriculars/">here</a>.</p>
+        <p>Part III of The Crimson&#39;s survey of the Class of 2018 examines the academic and extracurricular pursuits of the incoming freshmen. Roughly a quarter of surveyed freshmen admitted to cheating in an academic context while in high school, but most anticipate studying more once they arrive on campus and almost 90 percent said academics are their top priority here. The respondents&mdash;more than 70 percent of the incoming class&mdash;appear just as active outside of the classroom, on the field and in clubs. Like true Harvard students, they are ready to go—in every direction.</p>
+
+        <p>Read Part III of The Crimson's five-part series on the freshman survey <a href="http://www.thecrimson.com/article/2014/9/4/freshman-survey-academics-extracurriculars/">here</a>.</p>
     </div>
 
     <div class="scroll-row">
@@ -62,7 +63,7 @@
             <li id="cheating-school-type-tab">
                 <h2>Cheating by Type of High School</h2>
                 <div id="cheating-school-type" class="graph"></div>
-                <p>Eleven percent of respondents from public schools reported cheating on an exam and on a paper or take-home assignment, compared to 7.6 percent and 9 percent of private school students, respectively. The percentage of this year’s respondents from public school who admitted cheating on a paper or take-home assignment declined by about 9 percentage points from last year.</p>
+                <p>Eleven percent of respondents from public schools reported cheating on an exam and on a paper or take-home assignment, compared to 7.6 percent and 9 percent of private school students, respectively. The percentage of this year’s respondents from public schools who admitted cheating on a paper or take-home assignment declined by about 9 percentage points from last year.</p>
             </li>
             <li id="cheating-recruits-tab">
                 <h2>Cheating by Recruit Status</h2>
@@ -108,7 +109,7 @@
             <li id="pressure-tab">
                 <h2>Sources of Pressure</h2>
                 <div id="pressure" class="graph"></div>
-                <p>Like last year’s respondents, the majority of surveyed freshmen this year reported that their greatest source of pressure comes from their own expectations. Students did not appear to feel pressured from their teachers.</p>
+                <p>Like last year’s respondents, the majority of surveyed freshmen this year reported that their greatest source of pressure comes from their own expectations. Students did not appear to feel pressured by their teachers.</p>
             </li>
             <li id="extracurriculars-tab">
                 <h2>High School Extracurriculars</h2>
@@ -118,7 +119,7 @@
             <li id="athletics-by-income-tab">
                 <h2>Participation in High School Athletics by Income</h2>
                 <div id="athletics-by-income" class="graph"></div>
-                <p>Athletics was the only high school extracurricular activity in which respondents’ participation varied reliable by reported combined family income. The higher their family income bracket, the more likely respondents were to report participating in athletics in high school.</p>
+                <p>Athletics was the only high school extracurricular activity in which respondents’ participation varied reliably by reported combined family income. The higher their family income bracket, the more likely respondents were to report participating in athletics in high school.</p>
             </li>
             <li id="leadership-tab">
                 <h2>High School Extracurricular Leadership</h2>
@@ -173,7 +174,7 @@
             <li id="priorities-raw-tab">
                 <h2>Anticipated College Priorities</h2>
                 <div id="priorities-raw" class="graph"></div>
-                <p>This year&rsquo;s respondents&rsquo; priorities differ little from those of their surveyed sophomore counterparts last fall. The vast majority of this year&rsquo;s respondents ranked academics as their number one priority while at college, while only .4 percent of respondents ranked term-time employment as their top priority. Forty-three percent of respondents ranked extracurricular activities as their second highest priority at Harvard.</p>
+                <p>This year&rsquo;s respondents&rsquo; priorities differ little from those of their surveyed sophomore counterparts last fall. The vast majority of this year&rsquo;s respondents ranked academics as their number one priority while at college, while only .3 percent of respondents ranked term-time employment as their top priority. Forty-three percent of respondents ranked extracurricular activities as their second highest priority at Harvard.</p>
             </li>
             <li id="secondary-tab">
                 <h2>Anticipated Secondaries and Language Citations</h2>
@@ -183,7 +184,7 @@
             <li id="concentration-raw-tab">
                 <h2>Anticipated Concentrations</h2>
                 <div id="concentration-raw" class="graph"></div>
-                <p>Like last year&rsquo;s respondents, a plurality of this year&rsquo;s surveyed freshmen report that they are planning to concentrate in the social sciences. </p>
+                <p>Like last year&rsquo;s respondents, a plurality of this year&rsquo;s surveyed freshmen reported that they are planning to concentrate in the social sciences. </p>
             </li>
             <li id="concentration-gender-tab">
                 <h2>Anticipated Concentrations by Gender</h2>
@@ -237,17 +238,17 @@
             <li id="attrition-athletics-tab">
                 <h2>Likelihood of Playing All Four Years</h2>
                 <div id="attrition-athletics" class="graph"></div>
-                <p>Ninety-three percent of respondents who were recruited athletes reported that it was likely or very likely that they would play for all four years, compared to only 35.2 percent of walk-ons. The University does not report the rate of varsity athletes who play for all four years.</p>
+                <p>Ninety-three percent of respondents who were recruited athletes reported that it is likely or very likely that they would play for all four years, compared to only 35.2 percent of walk-ons. The University does not report the rate of varsity athletes who play for all four years.</p>
             </li>
             <li id="concussions-tab">
                 <h2>Athletics and Concussions</h2>
                 <div id="concussions" class="graph"></div>
-                <p>Similarly to last year’s survey, 78.2 percent of surveyed athletes—including recruits and intended walk-ons—have never been concussed.</p>
+                <p>Similarly to last year’s survey, 78 percent of surveyed athletes—including recruits and intended walk-ons—have never been concussed.</p>
             </li>
             <li id="concussions-view-tab">
                 <h2>Effect of Concussions on Attitude Towards Sport</h2>
                 <div id="concussions-view" class="graph"></div>
-                <p>23 percent of respondents who reported having been concussed said they changed their attitudes toward concussions because of the incident.</p>
+                <p>Twenty-three percent of respondents who reported having been concussed said they changed their attitudes toward concussions because of the incident.</p>
             </li>
             <li id="athletes-economics-conc-tab">
                 <h2>Preferences for Economics by Athletics</h2>
