--- a/jinja2/index.html.jinja2
+++ b/jinja2/index.html.jinja2
@@ -18,7 +18,7 @@
 			<div class="survey-section">
 				<div class="subhead">Makeup of the Class</div>
 				<div class="card" id="makeup1" data-destination="makeup/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card" id="makeup2" data-destination="http://www.thecrimson.com/article/2013/9/3/freshmen-employment-demographics-geography"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
+				<div class="card" id="makeup2" data-destination="http://www.thecrimson.com/article/2014/9/2/freshman-survey-part-i/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 			<div class="survey-section">
 				<div class="subhead">Admissions</div>
@@ -30,7 +30,7 @@
 			<div class="survey-section">
 				<div class="subhead">Academics</div>
 				<div class="card" id="ac1" data-destination="academics/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card" id="ac2" data-destination="academics/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
+				<div class="card" id="ac2" data-destination="http://www.thecrimson.com/article/2014/9/4/freshman-survey-academics-extracurriculars/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 			<div class="survey-section">
 				<div class="subhead">Lifestyle</div>
