--- a/jinja2/index.html.jinja2
+++ b/jinja2/index.html.jinja2
@@ -38,6 +38,13 @@
 				<div class="card card-disabled" id="sex2" data-destination=""><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 		</div>
+		<div class="section-container clearfix">
+			<div class="survey-section survey-section-center">
+				<div class="subhead">Yale</div>
+				<div class="card" id="yale1" data-destination="yale/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
+				<div class="card" id="yale2" data-destination="FILLME"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
+			</div>
+		</div>
 	</div>
 	<div style="clear: both"></div>
 </div>
