--- a/jinja2/index.html.jinja2
+++ b/jinja2/index.html.jinja2
@@ -14,7 +14,7 @@
 	</div>
 
 	<div class="landing">
-		<div class="section-container">
+		<div class="section-container clearfix">
 			<div class="survey-section">
 				<div class="subhead">Makeup of the Class</div>
 				<div class="card" id="makeup1" data-destination="makeup/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
@@ -26,7 +26,7 @@
 				<div class="card" id="admissions2" data-destination="http://www.thecrimson.com/article/2014/9/3/freshman-survey-2018-admissions/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 		</div>
-		<div class="section-container">
+		<div class="section-container clearfix">
 			<div class="survey-section">
 				<div class="subhead">Academics</div>
 				<div class="card" id="ac1" data-destination="academics/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
