--- a/compiled_html/css/fresh.css
+++ b/compiled_html/css/fresh.css
@@ -166,6 +166,12 @@ header h1 {
 	margin-right: 20px;
 }
 
+.survey-section-center {
+    margin: 0 auto;
+    float: none;
+    padding-right: 25px;
+}
+
 @media (max-width: 1278px) {
 	.section-container {
 		width: 100%;
@@ -176,6 +182,10 @@ header h1 {
 		margin: 0 auto;
 		float: none;
 	}
+
+    .survey-section-center {
+        padding-right: 0;
+    }
 
 	.survey-section > div.card {
 		margin-bottom: 40px;
