add yale topbar link and activate lifestyle

--- a/jinja2/_base.html.jinja2
+++ b/jinja2/_base.html.jinja2
@@ -46,7 +46,8 @@
                     <a href="makeup/"><li{% if filename=='makeup' %} class="active"{% endif %}>Makeup of the Class</li></a>
                     <a href="admissions/"><li{% if filename=='admissions' %} class="active"{% endif %}>Admissions</li></a>
                     <a href="academics/"><li{% if filename=='academics' %} class="active"{% endif %}>Academics/Extracurriculars</li></a>
-                    {#<a href="lifestyle/"><li{% if filename=='lifestyle' %} class="active"{% endif %}>Beliefs/Lifestyle</li></a>#}
+                    <a href="lifestyle/"><li{% if filename=='lifestyle' %} class="active"{% endif %}>Beliefs/Lifestyle</li></a>
+                    <a href="yale/"><li{% if filename=='yale' %} class="active"{% endif %}>Yale</li></a>
 				</ul>
 			</div>
 		</header>
