--- a/jinja2/index.html.jinja2
+++ b/jinja2/index.html.jinja2
@@ -34,7 +34,7 @@
 			</div>
 			<div class="survey-section">
 				<div class="subhead">Lifestyle</div>
-				<div class="card card-disabled" id="sex1" data-destination=""><div class="cover"></div><div class="text"><span>Data</span></div></div>
+				<div class="card card-disabled" id="sex1" data-destination="lifestyle/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
 				<div class="card card-disabled" id="sex2" data-destination=""><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 		</div>
