Added more charts

--- a/jinja2/lifestyle.html.jinja2
+++ b/jinja2/lifestyle.html.jinja2
@@ -118,6 +118,10 @@
             </li>
             <li id="regions-outer" class="clearfix">
                 <div id="regions-inner">
+                    <ul class="year-switch">
+                        <div class="year-switch-option" data-year="">2017</div><div
+                            class="year-switch-option selected" data-year="2018">2018</div>
+                    </ul>
                     <div id="paper">
                         <p>Westerners were least likely to identify as conservative and most likely to call themselves liberals. Respondents who called themselves conservative were most likely to hail from the Southeast, where 18 percent of new students said they fall to the right of the political spectrum.</p>
                     </div>
@@ -126,73 +130,158 @@
                         <div id="northeast" class="region">
                             <h3>
                                 <div class="region-stat">62.8%</div>
-                                identify as liberal.
+                                of those from the Northeast identify as liberal.
                             </h3>
                             <h3>
                                 <div class="region-stat">21.5%</div>
-                                consider themselves moderates.
+                                of those from the Northeast consider themselves moderates.
                             </h3>
                             <h3>
                                 <div class="region-stat">15.7%</div>
-                                identify as conservative.
+                                of those from the Northeast identify as conservative.
                             </h3>
                         </div>
                         <div id="southeast" class="region">
                             <h3>
                                 <div class="region-stat">56.8%</div>
-                                identify as liberal.
+                                of those from the Southeast identify as liberal.
                             </h3>
                             <h3>
                                 <div class="region-stat">25.2%</div>
-                                consider themselves moderates.
+                                of those from the Southeast consider themselves moderates.
                             </h3>
                             <h3>
                                 <div class="region-stat">18%</div>
-                                identify as conservative.
+                                of those from the Southeast identify as conservative.
                             </h3>
                         </div>
                         <div id="midwest" class="region">
                             <h3>
                                 <div class="region-stat">54.9%</div>
-                                identify as liberal.
+                                of those from the Midwest identify as liberal.
                             </h3>
                             <h3>
                                 <div class="region-stat">30.5%</div>
-                                consider themselves moderates.
+                                of those from the Midwest consider themselves moderates.
                             </h3>
                             <h3>
                                 <div class="region-stat">14.6%</div>
-                                identify as conservative.
+                                of those from the Midwest identify as conservative.
                             </h3>
                         </div>
                         <div id="southwest" class="region">
                             <h3>
                                 <div class="region-stat">51.2%</div>
-                                identify as liberal.
+                                of those from the Southwest identify as liberal.
                             </h3>
                             <h3>
                                 <div class="region-stat">33.7%</div>
-                                consider themselves moderates.
+                                of those from the Southwest consider themselves moderates.
                             </h3>
                             <h3>
                                 <div class="region-stat">15.1%</div>
-                                identify as conservative.
+                                of those from the Southwest identify as conservative.
                             </h3>
                         </div>
                         <div id="west" class="region">
                             <h3>
                                 <div class="region-stat">68.8%</div>
-                                identify as liberal.
+                                of those from the West identify as liberal.
                             </h3>
                             <h3>
                                 <div class="region-stat">21.2%</div>
-                                consider themselves moderates.
+                                of those from the West consider themselves moderates.
                             </h3>
                             <h3>
                                 <div class="region-stat">10.0%</div>
-                                identify as conservative.
+                                of those from the West identify as conservative.
                             </h3>
                         </div>                              
+
+                        <div id="northeast2018" class="region">
+                            <h3>
+                                <div class="region-stat">62.4%</div>
+                                of those from the Northeast identify as liberal.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">22.8%</div>
+                                of those from the Northeast consider themselves moderates.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">14.8%</div>
+                                of those from the Northeast identify as conservative.
+                            </h3>
+                        </div>
+                        <div id="southeast2018" class="region">
+                            <h3>
+                                <div class="region-stat">53.7%</div>
+                                of those from the Southeast identify as liberal.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">24.0%</div>
+                                of those from the Southeast consider themselves moderates.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">22.3%</div>
+                                of those from the Southeast identify as conservative.
+                            </h3>
+                        </div>
+                        <div id="midwest2018" class="region">
+                            <h3>
+                                <div class="region-stat">61.6%</div>
+                                of those from the Midwest identify as liberal.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">22.4%</div>
+                                of those from the Midwest consider themselves moderates.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">16.0%</div>
+                                of those from the Midwest identify as conservative.
+                            </h3>
+                        </div>
+                        <div id="southwest2018" class="region">
+                            <h3>
+                                <div class="region-stat">62.0%</div>
+                                of those from the Southwest identify as liberal.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">25.3%</div>
+                                of those from the Southwest consider themselves moderates.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">12.7%</div>
+                                of those from the Southwest identify as conservative.
+                            </h3>
+                        </div>
+                        <div id="west2018" class="region">
+                            <h3>
+                                <div class="region-stat">64.0%</div>
+                                of those from the West identify as liberal.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">24.9%</div>
+                                of those from the West consider themselves moderates.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">11.1%</div>
+                                of those from the West identify as conservative.
+                            </h3>
+                        </div>                              
+                        <div id="outside2018" class="region">
+                            <h3>
+                                <div class="region-stat">53.9%</div>
+                                of those from outside the United States identify as liberal.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">25.0%</div>
+                                of those from outside the United States consider themselves moderates.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">21.1%</div>
+                                of those from outside the United States identify as conservative.
+                            </h3>
+                        </div>
                     </div>                              
                 </div>
                 <p></p>
