add marijuana legalization chart and final club bros chart

--- a/jinja2/lifestyle.html.jinja2
+++ b/jinja2/lifestyle.html.jinja2
@@ -234,6 +234,9 @@
                 <a href="#sex-gender-tab" data-toggle="tab">Sexual Activity by Gender</a>
             </li>
             <li>
+                <a href="#sex-final-clubs-tab" data-toggle="tab">Sexual Activity by Social Club Interest</a>
+            </li>
+            <li>
                 <a href="#sex-age-tab" data-toggle="tab">Age of First Sexual Activity</a>
             </li>
             <li>
@@ -262,6 +265,11 @@
                 <h2>Sexual Activity by Gender</h2>
                 <div id="sex-gender" class="graph"></div>
                 <p>Men were more likely than women to report having lost their virginity. Moreover, men were likely to have had sex at a younger age than women.</p>
+            </li>
+            <li id="sex-final-clubs-tab">
+                <h2>Sexual Activity by Social Club Interest</h2>
+                <div id="sex-final-clubs" class="graph"></div>
+                <p>FILLME</p>
             </li>
             <li id="sex-age-tab">
                 <h2>Age of First Sexual Activity Among Non-Virgins</h2>
@@ -312,6 +320,9 @@
                 <a href="#drugs-weed-tab" data-toggle="tab">Marijuana Users</a>
             </li>
             <li>
+                <a href="#drugs-weed-legal-tab" data-toggle="tab">Support for Marijuana Legalization by Use</a>
+            </li>
+            <li>
                 <a href="#drugs-hard-tab" data-toggle="tab">Hard Drug Users</a>
             </li>
             <li>
@@ -343,6 +354,11 @@
                 <h2>Marijuana Users</h2>
                 <div id="drugs-weed" class="graph"></div>
                 <p>Twenty-two percent of respondents said they have tried marijuana, slightly more than said they have tried tobacco. Eight percent of respondents reported using marijuana once a month or more.</p>
+            </li>
+            <li id="drugs-weed-legal-tab">
+                <h2>Support for Marijuana Legalization by Use</h2>
+                <div id="drugs-weed-legal" class="graph"></div>
+                <p>FILLME</p>
             </li>
             <li id="drugs-hard-tab">
                 <h2>Hard Drug Users</h2>
