add lifestyle header text

--- a/jinja2/lifestyle.html.jinja2
+++ b/jinja2/lifestyle.html.jinja2
@@ -19,8 +19,8 @@
 {% block content %}
     <div class="intro scroll-row">
         <div id="subhead">Beliefs and Lifestyle</div>
-        <p>From religion and politics, to drugs and alcohol, to mental health and technology, it is clear that the newest members of the Harvard community have much in common and plenty to disagree about. Part IV of The Crimson&#39;s freshmen survey takes a broad look at just what the members of the Class of 2017 do and believe.  Most of those surveyed are virgins, most consider themselves liberal, and most have an iPhone in their pocket, but a closer look at the more than 1,300 respondents&mdash;nearly 80 percent of the class&mdash;reveals a world of difference in the way freshmen lead their lives.</p>
-        <p>Read Part IV of The Crimson's four-part series on the freshman survey <a href="http://www.thecrimson.com/article/2013/9/6/freshman-survey-part-iv/">here</a>.</p>
+        <p>Part IV of The Crimson’s survey of the Class of 2018 focuses on the beliefs and lifestyles of the incoming freshmen. Thirty-eight percent of respondents said they were still virgins. Even fewer have tried marijuana or smoked a cigarette. When it comes to politics, the Class of 2018 appears to be decidedly liberal, with a majority favorably rating President Barack Obama and same-sex marriage. While the survey’s respondents—who account for more than 70 percent of the incoming class—are less alike when it comes to religion, most seem to be united in their attachment to Facebook.</p>
+        <p>Read Part IV of The Crimson's five-part series on the freshman survey <a href="FILLME">here</a>.</p>
 
     </div>
 
