Added narrative button

--- a/jinja2/_base.html.jinja2
+++ b/jinja2/_base.html.jinja2
@@ -58,6 +58,7 @@
 			<div id="subnav">
 				<ul>
                     {% block nav_items %}{% endblock %}
+                    <li><a href="{% block narrative_link %}{% endblock %}"><span id="narrative-button">Read Narrative</span></a></li>
 				</ul>
 			</div>
 			<div id="main">
