--- a/jinja2/academics.html.jinja2
+++ b/jinja2/academics.html.jinja2
@@ -13,6 +13,7 @@
     <li>At Harvard</li>
     <li>Athletics</li>
 {% endblock %}
+{% block narrative_link %}http://www.thecrimson.com/article/2014/9/4/freshman-survey-academics-extracurriculars/{% endblock %}
 
 {% block content %}
     <div class="intro scroll-row">
