--- a/jinja2/admissions.html.jinja2
+++ b/jinja2/admissions.html.jinja2
@@ -13,6 +13,7 @@
     <li>College Acceptances</li>
     <li>Athletics</li>
 {% endblock %}
+{% block narrative_link %}http://www.thecrimson.com/article/2014/9/3/freshman-survey-2018-admissions/{% endblock %}
 
 {% block content %}
     <div class="intro scroll-row">
