--- a/jinja2/makeup.html.jinja2
+++ b/jinja2/makeup.html.jinja2
@@ -12,6 +12,7 @@
     <li>Geography</li>
     <li>Employment</li>
 {% endblock %}
+{% block narrative_link %}http://www.thecrimson.com/article/2014/9/2/freshman-survey-part-i/{% endblock %}
 
 {% block content %}
     <div class="intro scroll-row">
