--- a/compiled_html/css/fresh.css
+++ b/compiled_html/css/fresh.css
@@ -350,6 +350,15 @@ hr {
 	color: #ba0600
 }
 
+#subnav #narrative-button {
+    background-color: #000;
+    color: #fff;
+    padding: 10px;
+    margin-top: 30px;
+    display: inline-block;
+    font-size: 20px;
+}
+
 .scroll-row p {
 	width: 80%;
 }
