--- a/jinja2/lifestyle.html.jinja2
+++ b/jinja2/lifestyle.html.jinja2
@@ -15,6 +15,7 @@
     <li>Mental Health</li>
     <li>Technology</li>
 {% endblock %}
+{% block narrative_link %}FILLME{% endblock %}
 
 {% block content %}
     <div class="intro scroll-row">
