--- a/jinja2/yale.html.jinja2
+++ b/jinja2/yale.html.jinja2
@@ -10,11 +10,12 @@
 {% block nav_items %}
     <li>Harvard vs. Yale</li>
 {% endblock %}
+{% block narrative_link %}FILLME{% endblock %}
 
 {% block content %}
     <div class="intro scroll-row">
-        <div id="subhead">Makeup of the Class</div>
-        <p>FILLME</p>
+        <div id="subhead">Yale's Freshman Class</div>
+        <p>In the final part of The Crimson’s series on the Class of 2018, we turn our attention south, to New Haven. The Crimson partnered with the Yale Daily News to compare the newest Harvardians with incoming Yalies. The two classes, it turns out, appear to be remarkably similar. Though more Harvard respondents expressed interest in Greek life than their Yale counterparts and the two classes demonstrate opposite gender skews, on most points, they agree. Except perhaps, on the score of this year&rsquo;s Game.</p>
         <p>Read Part V of The Crimson's five-part series on the freshman survey <a href="FILLME">here</a>.</p> </div>
     <div class="scroll-row">
         <h1>Harvard vs. Yale</h1>
@@ -39,27 +40,27 @@
             <li id="gender-tab" class="active">
                 <h2>Gender</h2>
                 <div id="gender" class="graph"></div>
-                <p>FILLME</p>
+                <p>While men are overrepresented in Harvard&rsquo;s Class of 2018, among Yale respondents, the gender imbalance was flipped. Fifty-five percent of surveyed Yale freshmen identified as female.</p>
             </li>
             <li id="ea-tab">
-                <h2>Ethnicity</h2>
+                <h2>Early Action</h2>
                 <div id="ea" class="graph"></div>
-                <p>FILLME</p>
+                <p>Both Harvard and Yale have early admissions programs, and more than half of Harvard respondents were admitted through its early admission program. Just under half of surveyed Yale freshmen were accepted through their school&rsquo;s early round.</p>
             </li>
             <li id="legacy-tab">
                 <h2>Legacy</h2>
                 <div id="legacy" class="graph"></div>
-                <p>FILLME</p>
+                <p>A larger proportion of surveyed Harvard freshmen indicated that they had a familial connection to their school than did their Yale counterparts. Eleven percent of Yale respondents reported that they have one or more parents who graduated from Yale.</p>
             </li>
             <li id="greek-tab">
                 <h2>Greek Life</h2>
                 <div id="greek" class="graph"></div>
-                <p>FILLME</p>
+                <p>Forty-five percent of surveyed Harvard freshmen expressed interest in joining a fraternity, sorority, or final club. In contrast, just 18 percent of Yale respondents reported plans to participate in Greek life in college, though that figure may not account for interest in participating in Yale’s secret societies.</p>
             </li>
             <li id="athletics-tab">
                 <h2>Athletics</h2>
                 <div id="athletics" class="graph"></div>
-                <p>FILLME</p>
+                <p>Harvard has more Division I varsity sports teams than any other college in the nation. More surveyed Harvard freshmen said they intend to play a varsity sport in college&mdash;roughly 20 percent, including both recruits and prospective walk-ons&mdash;than at Yale, where 14 percent reported plans to join a team.</p>
             </li>
         </ul>
     </div>
